<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProfileFromSMS</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_about_app">Allow</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">About App</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_profile_setting">Profile Setting</string>
    <string name="pref_Enable_Profile">Enable Profile</string>
    <string name="pref_Enable_Profile_Status">Allow</string>
    <string name="prefStatus">Allow</string>
    <string name="About">ProfileFromSMS enables the profile of the mobile to be set to Silent or Loud while receiving an SMS</string>
    <string name="about_sum">ProfileFromSMS enables the profile of the mobile to be set to Silent or Loud while receiving an SMS</string>
    <string name="about_title">About</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_addcontact">AddContactActivity</string>
    
    <string name="strContactInfo">Contact information</string>
    <string name="strContactName">Name</string>
    <string name="strContactNumber">Number</string>
    <string name="strSave">Save</string>
    <string name="strCancel">Cancel</string>
    
<!--     About Screen -->

<string name="strFacebook">Facebook : </string>
<string name="strFacebookAdd">www.facebook.com/profilefromsms</string>
<string name="strBlog">Blog : </string>
<string name="strBlogAdd">http://profilefromsms.blogspot.in/</string>

</resources>


