<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="MobileAssistant.Profile.profilefromsms" >


    <TextView
        android:id="@+id/lblFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"                
        android:layout_marginTop="20dp"
        android:text="@string/strFacebook" />
    
    <TextView
        android:id="@+id/lblFbAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/lblFb"
        android:layout_marginTop="10dp"
        android:text="@string/strFacebookAdd" />

    <TextView
        android:id="@+id/lblBlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/lblFbAddress"
        android:layout_marginTop="30dp"
        android:text="@string/strBlog" />
    
    <TextView
        android:id="@+id/lblBlogAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/lblBlog"
        android:layout_marginTop="10dp"
        android:text="@string/strBlogAdd" />
    
    <TextView
        android:id="@+id/lblSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/lblBlogAddress"
        android:layout_marginTop="30dp"
        android:text="For technical issues, please write to : " />
    
    <TextView
        android:id="@+id/lblSupportAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/lblSupport"
        android:layout_marginTop="10dp"
        android:text="profilefromsms@gmail.com" />

</RelativeLayout>
